<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/adjust_payouts_dialog_message" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_horizontal"/>
    </TableRow>
	<TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/recalculateManual" android:layout_height="wrap_content" android:text="@string/recalculate_manual" android:layout_width="match_parent"/>
        <Button android:id="@+id/recalculateAuto" android:layout_height="wrap_content" android:text="@string/recalculate_auto" android:layout_width="match_parent"/>
        <Button android:id="@+id/doNotRecalculate" android:layout_height="wrap_content" android:text="@string/do_not_recalculate" android:layout_width="match_parent"/>
    </TableRow>
</TableLayout>